kubernetes-manifests/loadgen.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loadgen
  labels:
    app: loadgenerator
    service: loadgen
spec:
  type: ClusterIP
  ports:
    - name: loadgen
      protocol: TCP
      port: 8089
  selector:
    app: loadgenerator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  selector:
    matchLabels:
      app: loadgenerator
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: docker.io/vmwareallspark/acme-load-gen:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8089
        command:
        - locust
        args: ["--no-web","--host=http://frontend:80","-c","100","-r","10"]
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
