kubernetes-manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: "zerossl"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: "contour"
spec:
  tls:
  - hosts:
    - acme-fitness.home-wl1.tkg.vmware.work.mbentley.net
    secretName: acme-fitness.home-wl1.tkg.vmware.work.mbentley.net
  rules:
  - host: acme-fitness.home-wl1.tkg.vmware.work.mbentley.net
    http:
      paths:
        - pathType: Prefix
