kubernetes-manifests/frontend-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
spec:
  ports:
    - name: http-frontend
      protocol: TCP
      port: 80
      targetPort: 3000
#      nodePort: 30430
  selector:
    app: acmefit
    service: frontend
#  type: LoadBalancer
#  type: NodePort
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
spec:
  selector:
    matchLabels:
      app: acmefit
      service: frontend
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: frontend
    spec:
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-front-end:latest
        name: frontend
        ports:
        - containerPort: 3000
          name: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: "zerossl"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: "contour"
spec:
  tls:
  - hosts:
    - acme-fitness.home-wl1.tkg.vmware.work.mbentley.net
    secretName: acme-fitness.home-wl1.tkg.vmware.work.mbentley.net
  rules:
  - host: acme-fitness.home-wl1.tkg.vmware.work.mbentley.net
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: frontend
              port:
                number: 80
